# NovelAssist

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  architecture.md  package.json  plan.md  pnpm-lock.yaml  refactor-plan.md  tsconfig.base.json
apps/ai-service/: .env.example  pyproject.toml
apps/ai-service/app/: cache.py  config.py  embedding.py  json_utils.py  main.py  prompts.py  router.py  schemas.py
apps/ai-service/app/providers/: anthropic.py  base.py  openai_compat.py
apps/backend/: .env.example  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/ai/: ai.context.ts  ai.controller.ts  ai.module.ts  ai.service.ts  config.controller.ts  memory.controller.ts  memory.service.ts  runtime.service.ts
apps/backend/src/bible/: bible.controller.ts  bible.service.ts
apps/backend/src/chapters/: chapter-pipeline.service.ts  (+3 more)
apps/frontend/: next.config.mjs  package.json  tailwind.config.ts
apps/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
apps/frontend/components/: app-shell.tsx  autopilot-modal.tsx  batch-chapters-modal.tsx  bible-panel.tsx  chapter-editor.tsx  character-trajectory.tsx  editor-marks.ts  entity-browser.tsx  issue-card.tsx  knowledge-view.tsx  outline-panel.tsx  theme-toggle.tsx  ui.tsx  visualization.tsx  workbench-nav.tsx  workbench-panels.tsx
apps/frontend/lib/: api.ts  templates.ts  types.ts  use-html-theme.ts
desktop/: build.cjs  builder.yml  main.cjs
scripts/: use-claude-code-config.py
(+31 files in other folders)
