[project]
name = "ai-service"
version = "0.1.0"
description = "Novel-assist AI service: model abstraction layer + streaming"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
